--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
+.fluidbox__overlay {
+  background-color: rgba(0,0,0,0.8);
+}
+
 body {
   font-family: Lato, Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
